# RDLOCAL

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  build.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: security-scan.yml
app/: annotation_db.py  services.py  tree_models.py
app/gui/: annotation_cache.py  block_events.py  block_handlers.py  block_verification_dialog.py  block_verification_models.py  block_verification_worker.py  connection_mixin.py  correction_mode_dialog.py  create_node_dialog.py  file_auto_save.py  file_download.py  file_operations.py  file_transfer_worker.py  hotkeys_dialog.py  job_details_dialog.py  main_window.py  main_window_state.py  menu_setup.py  ocr_config.py  ocr_dialog.py  page_viewer.py  page_viewer_blocks.py  page_viewer_state.py  panels_setup.py  (+14 more)
data/: СТ26-01-14-КЖ1-2.2-Изм.3_document.md
deploy/: Dockerfile  docker-compose.prod.yml  entrypoint.sh  supervisord.conf
docs/: ARCHITECTURE.md  DATABASE.md  DEVELOPER_GUIDE.md  README.md  REMOTE_OCR_SERVER.md  WORKFLOW_MAP.md
rd_core/: annotation_canonicalizer.py  annotation_io.py  annotation_migration.py  annotation_split.py  ocr_block_status.py  ocr_result.py  pdf_status.py  pdf_utils.py  r2_errors.py  r2_upload.py  r2_utils.py  sidecar_resolver.py
tests/: conftest.py  test_annotation_io.py  test_auth_bearer.py  test_block_verification.py  test_chandra_parse_response.py  test_docs_smoke.py  test_image_ocr_contract.py  test_image_preview_and_label.py  test_lmstudio_client.py  test_lmstudio_smoke.py  test_local_ocr.py  test_models.py  test_ocr_factory.py  test_ocr_result.py  test_page_viewer_state.py  test_services.py
web/: package-lock.json  package.json  vite.config.ts
(+208 files in other folders)
